welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: value =< is not a member of Int
	} while (Nieme =< num)
                       ^